--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@line/bot-sdk": "^7.7.0",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "openai": "^4.57.0"
   }
 }
+
